<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="#d2d2d2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_prev_month"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:background="@drawable/icon_calender_left" />

            <TextView
                android:id="@+id/current_data"
                style="@style/text_title_14_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_marginRight="@dimen/dp_24" />

            <Button
                android:id="@+id/btn_next_month"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:background="@drawable/icon_calender_right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_alignParentBottom="true"
            android:background="#d2d2d2" />

        <com.movit.platform.innerea.widget.flexiblecalendar.FlexibleCalendarView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="#d2d2d2"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/text_title_12_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:drawableLeft="@drawable/calander_blue_point"
                    android:drawablePadding="@dimen/dp_5"
                    android:text="@string/gps_calendar_status_normal" />

                <TextView
                    style="@style/text_title_12_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/icon_calender_red_point"
                    android:drawablePadding="@dimen/dp_5"
                    android:text="@string/gps_calendar_status_late" />

                <TextView
                    style="@style/text_title_12_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:drawableLeft="@drawable/icon_calender_grey_point"
                    android:drawablePadding="@dimen/dp_5"
                    android:text="@string/gps_calendar_status_none" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="#d2d2d2" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp_15"
                        android:text="@string/gps_selected_day"
                        android:textColor="#999999"
                        android:textSize="@dimen/sp_15" />

                    <TextView
                        android:id="@+id/gps_log_day"
                        style="@style/text_title_13_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:text="2015年10月20日" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:background="#d2d2d2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_44"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/text_title_blue_13_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:text="@string/gps_calendar_record_first" />

                        <TextView
                            android:id="@+id/gps_first_time"
                            style="@style/text_title_13_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="09:00" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="@dimen/dp_15"
                        android:background="#d2d2d2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_44"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/text_title_blue_13_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:text="@string/gps_calendar_record_last" />

                        <TextView
                            android:id="@+id/gps_last_time"
                            style="@style/text_title_13_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="未打卡" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:background="#d2d2d2" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>