<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="#d2d2d2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/text_title_blue_15_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/gps_alarm_first" />

            <TextView
                android:id="@+id/gps_first_time"
                style="@style/text_title_16_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_15"
                android:drawableRight="@drawable/icon_clock"
                android:text="09:00:00" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.movit.platform.innerea.widget.switchButton.SwitchButton
                    android:id="@+id/gps_first_switch"
                    style="@style/SwitchButtonStyle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumb_height="@dimen/dp_50"
                    app:kswThumb_width="@dimen/dp_50"
                    app:kswAnimationVelocity="8"
                    app:kswMeasureFactor="1.5"
                    app:kswOffDrawable="@drawable/ios_off"
                    app:kswOnColor="#43d95d"
                    app:kswThumbDrawable="@drawable/ios_thumb"
                    app:kswThumb_marginBottom="-8dp"
                    app:kswThumb_marginLeft="-5dp"
                    app:kswThumb_marginRight="-5dp"
                    app:kswThumb_marginTop="-2.5dp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="#d2d2d2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                style="@style/text_title_blue_15_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/gps_alarm_last" />

            <TextView
                android:id="@+id/gps_last_time"
                style="@style/text_title_16_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:drawablePadding="@dimen/dp_15"
                android:drawableRight="@drawable/icon_clock"
                android:text="18:00:00" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.movit.platform.innerea.widget.switchButton.SwitchButton
                    android:id="@+id/gps_last_switch"
                    style="@style/SwitchButtonStyle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumb_height="@dimen/dp_50"
                    app:kswThumb_width="@dimen/dp_50"
                    app:kswAnimationVelocity="8"
                    app:kswMeasureFactor="1.5"
                    app:kswOffDrawable="@drawable/ios_off"
                    app:kswOnColor="#43d95d"
                    app:kswThumbDrawable="@drawable/ios_thumb"
                    app:kswThumb_marginBottom="-8dp"
                    app:kswThumb_marginLeft="-5dp"
                    app:kswThumb_marginRight="-5dp"
                    app:kswThumb_marginTop="-2.5dp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="#d2d2d2" />
    </LinearLayout>

    <Button
        android:id="@+id/gps_reset"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/shape_reset_gps_alarm_bg"
        android:text="@string/gps_alarm_reset"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />

</LinearLayout>